# docker-for-ml-tutorial

./: .gitignore  Dockerfile.combined  README.md  docker-with-aws.md  dockerfile-basics.md
app/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/src/: app.py
pipeline/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
pipeline/src/: main.py
