[tool.poetry]
name = "iris-inference"
version = "0.1.0"
description = ""
authors = ["Michael Fedell <michaelfedell14@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
joblib = "^1.2.0"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pylint = "^2.17.2"

[tool.poetry.scripts]
app = "src.app:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
