[tool.poetry]
name = "iris-pipeline"
version = "0.1.0"
description = ""
authors = ["Michael Fedell <michaelfedell14@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.2"
joblib = "^1.2.0"

[tool.poetry.scripts]
pipeline = "src.main:main"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
